--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -73,3 +73,43 @@
   /** opacity **/
   // mask 透明度
   $modal-opacity: 0.3;
+
+.form-cell {
+  padding: 10rpx 0;
+  width: calc(100vw - 48rpx);
+  min-height: 30px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  &:not(:last-child) {
+    border-bottom: 1rpx solid #e5e5e5;
+  }
+  span {
+    color: #2F2F2F;
+    font-size: 28rpx;
+  }
+  .right-control-div {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    input {
+      width:  calc(100% - 30rpx);
+      font-size: 28rpx;
+    }
+    span {
+      margin: 0 5rpx;
+    }
+  }
+  input {
+    text-align: right;
+    color: #656565;
+  }
+  .picker {
+    color: #656565;
+    min-width: 60px;
+    display: block;
+    text-align: right;
+    font-size: 28rpx;
+  }
+}
